--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   shared_preferences: ^2.5.3
   jwt_decoder: ^2.0.1
   lucide_icons: ^0.257.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
