--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   jwt_decoder: ^2.0.1
   lucide_icons: ^0.257.0
   intl: ^0.20.2
+  tbib_downloader: ^2.4.0
 
 dev_dependencies:
   flutter_test:
